eclat-compiler/tests/bad/abstract_type_decl/s9.ecl
type 'a t<42> ;;

let main () = () ;;
(* ==============================
   file tests/bad/abstract_type_decl/s9.ecl, line 1, characters 10-12:
   Error: syntax error
   ============================== *)

(* todo: improve error message *)